# multiagent-bmi-webui-collab

./: .gitignore  .gitmodules  README.md  development.md  pyproject.toml  requirements.txt  user_guide.md
.keys/: san.cnf  san.cnf.txt
app/: app_state.py  async_vector_env.py  bci_input.py  camera.py  env.py  main.py  stream.py
app/bci/: bci_decoder.py
app/devices/: eeg.py  pupil.py  pupil_dummy.py  pupil_mock.py  utils.py
app/devices/eeg/: README.md  baseline.py  decoder.py  main.py  recorder.py  train.py  utils.py
app/devices/eeg/mock_streamer/: main.py
app/devices/eeg/models/: threshold_model.py
app/devices/example/: main.py
app/devices/eye/: README.md  main.py  main_dummy.py
app/devices/mock_eeg_streamer/: main.py
app/devices/mock_streamer/: eeg.py
app/devices/utils/: database.py  networking.py  utils.py
app/routes/: browser.py
app/scripts/: metrics.ipynb
app/static/: app.js  apriltag.css  chart.js  cursor.js  dataCollection.js  eeg.js  gamepad.js  gaze.js  index.css  index.js  keyboard.js  localization.js  log.css  mouse.js  nasa-tlx-survey.js  register.js  style.css  utils.js  webrtc.js
app/static/examples/: robot_selection_device.js  robot_selection_device_with_device_server.js  subtask_selection_device_with_device_server.js
app/templates/: app.html  index.html  nasa-tlx-survey.html  register.html
app/utils/: anonymize.py  metrics.py  networking.py  webrtc.py
client/: eeg_client.py  pupil_client.py
mabmi/app/: main.py
mabmi/device_client/: eeg.py  eeg_client.py  mock_eeg.py  pupil.py  pupil_mock.py  requirements.txt
mabmi/routes/: browser.py  eeg.py  eeg_command_sub.py
mabmi/static/: app.js  style.css  webrtc.js
mabmi/templates/: index.html
mabmi/utils/: webrtc.py
mabui/app/: main.py
mabui/device_client/: eeg.py  pupil.py  pupil_mock.py
mabui/devices/: pupil.py
mabui/routes/: browser.py  eeg_command_sub.py
mabui/static/: webrtc.js
static/: app.js  style.css
templates/: index.html
(+6 files in other folders)
