[project]
name = "multiagent-bmi-webui"
version = "0.1.0"
readme = "README.md"

[project.optional-dependencies]
server = [
    "aiortc",
    "fastapi",
    "uvicorn",
    "python-socketio",
    "python-multipart",
    "itsdangerous",
    "python-dotenv",
]
user = [
    "click",
    "h5py",
    "pupil-core-network-client",
    "pylsl",
    "python-socketio",
    "reactivex",
    # mock eeg
    "mne",
    "pandas",
    "pyxdf",
    "tinydb",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
disable_error_code = ["import-untyped"]
